--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,5 +27,15 @@
         app:layout_constraintTop_toBottomOf="@+id/capturedImage"
         tools:layout_marginBottom="30dp" />
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btnCamera"
+        tools:layout_editor_absoluteY="425dp" />
+
 
 </android.support.constraint.ConstraintLayout>
